--- a/style.css
+++ b/style.css
@@ -10,8 +10,11 @@ html {
 
 body {
   padding: 0;
-  margin: 0;
+  margin: 0 6.5rem 0 6.5rem;
   font-family: 'Amatic SC', cursive;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 h1 {
@@ -66,4 +69,26 @@ h1 {
 
 .hole.up .mole {
   top: 0;
+}
+
+.high-score {
+  font-size: 5rem;
+  text-align: center;
+}
+
+
+
+.container1 {
+  display: flex;
+  justify-content: center;
+  border: solid;
+}
+
+.container2 {
+  border: solid;
+}
+
+.container3{
+  border: solid;
+  display: block;
 }
