--- a/style.css
+++ b/style.css
@@ -125,10 +125,11 @@ button {
   position: fixed;
   top: -20rem;
   left: -20rem;
-  background: rgba(255, 255, 0, 0.774);
-  width: 40rem;
-  height: 40rem;
+  background: yellow;
+  width: 39rem;
+  height: 39rem;
   border-radius: 50%;
+  box-shadow: 1rem 1rem 1rem yellow;
 }
 
 .sun-eyeL {
@@ -174,4 +175,32 @@ button {
   top: 9.5rem;
   left: 6rem;
   background: black;
+}
+
+.sun-speech {
+  z-index: 1;
+  position: fixed;
+  height: fit-content;
+  width: auto;
+  border-radius: 50%;
+  padding: 0 1rem 0 1rem;
+  top: 4rem;
+  left: 18rem;
+  background: white;
+  text-align: center;
+  transform: rotate(-20deg);
+  font-size: 3rem;
+  box-shadow: .5rem 1rem 1rem rgba(0, 0, 0, 0.438);
+}
+
+.notch {
+  z-index: 0;
+  position: fixed;
+  height: 2rem;
+  width: 2rem;
+  top: 1.25rem;
+  left: 1.25rem;
+  background: white;
+  transform: rotate(20deg);
+  font-size: 3rem;
 }
