--- a/style.css
+++ b/style.css
@@ -182,15 +182,21 @@ button {
   position: fixed;
   height: fit-content;
   width: auto;
+  top: -100%;
+  left: -100%;
   border-radius: 50%;
   padding: 0 1rem 0 1rem;
-  top: 4rem;
-  left: 18rem;
   background: white;
   text-align: center;
   transform: rotate(-20deg);
   font-size: 3rem;
   box-shadow: .5rem 1rem 1rem rgba(0, 0, 0, 0.438);
+}
+
+.sun-speech.showing {
+  display: block;
+  top: 4rem;
+  left: 18rem;
 }
 
 .notch {
