--- a/style.css
+++ b/style.css
@@ -135,24 +135,26 @@ button {
 .sun-eyeL {
   z-index: 1;
   position: fixed;
-  top: 7rem;
-  left: 3rem;
-  height: 4rem;
+  top: 9rem;
+  left: 4rem;
+  height: 2rem;
   width: 2rem;
   border-radius: 50%;
-  background: black;
+  box-shadow: -.2rem -.9rem 0 1rem white;
+  background: rgba(0, 0, 0, 0.815);
   transform: rotate(-30deg);
 }
 
 .sun-eyeR {
   z-index: 1;
   position: fixed;
-  top: 4rem;
-  left: 8rem;
-  height: 4rem;
+  top: 6rem;
+  left: 9rem;
+  height: 2rem;
   width: 2rem;
   border-radius: 50%;
-  background: black;
+  box-shadow: -.2rem -.9rem 0 1rem white;
+  background: rgba(0, 0, 0, 0.815);
   transform: rotate(-30deg);
 }
 
@@ -166,6 +168,7 @@ button {
   transform: rotate(-35deg);
   border-radius: 50%;
   border-bottom: black solid;
+  box-shadow: 0 1rem 0  black;
   background: none;
 }
 
@@ -175,6 +178,7 @@ button {
   top: 9.5rem;
   left: 6rem;
   background: black;
+  box-shadow: 0 0 0  black;
 }
 
 .sun-speech {
