--- a/style.css
+++ b/style.css
@@ -20,6 +20,22 @@ body {
   width: auto;
 }
 
+@media (max-width: 1000px){
+  body {
+    padding-top: 5rem;
+    padding-bottom: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+  }
+
+  html{
+    height: 100vh;
+  }
+}
+
 h1 {
   text-align: center;
   font-size: 10rem;
