--- a/style.css
+++ b/style.css
@@ -34,6 +34,20 @@ body {
   html{
     height: 100vh;
   }
+
+  .sun-smile {
+    z-index: 1;
+    position: fixed;
+    top: 9rem;
+    left: 3rem;
+    height: 5rem;
+    width: 12rem;
+    transform: rotate(-35deg);
+    border-radius: 50%;
+    border-bottom: black solid;
+    background: none;
+}
+
 }
 
 h1 {
